[gd_scene format=3 uid="uid://c1h6pqnhbr5no"]

[ext_resource type="Script" uid="uid://486d8jq4rlh0" path="res://Scripts/enemy/enemy_spawner.gd" id="1_4l55s"]
[ext_resource type="Script" uid="uid://cqw5n3pgcmai6" path="res://Scripts/enemy/EnemyPrefab.gd" id="2_tdwud"]
[ext_resource type="Resource" uid="uid://f1l3e7pudln" path="res://Scripts/enemy/augmented/slasher/AugSlasherPrefab.tres" id="4_5f1q1"]
[ext_resource type="Resource" uid="uid://ctly0bibi2t2d" path="res://Scripts/enemy/normal/slasher/SlasherPrefab.tres" id="4_mjc5i"]
[ext_resource type="Resource" uid="uid://1dmu76yei0sm" path="res://Scripts/enemy/normal/microbot/MicrobotPrefab.tres" id="4_qiwfs"]
[ext_resource type="Resource" uid="uid://x8fs3x2upf2j" path="res://Scripts/enemy/normal/mage/MagePrefab.tres" id="5_te1bg"]
[ext_resource type="Resource" uid="uid://xrq4kt1wxhud" path="res://Scripts/enemy/augmented/microbot/AugMicrobotPrefab.tres" id="6_iav0j"]
[ext_resource type="Script" uid="uid://2rg187ye080s" path="res://Scripts/enemy/difficulty_manager.gd" id="6_mjc5i"]
[ext_resource type="Resource" uid="uid://bhow6fae2mh5t" path="res://Scripts/enemy/augmented/mage/AugMagePrefab.tres" id="8_6o5gf"]
[ext_resource type="Resource" uid="uid://bm0jberehwd8k" path="res://Scripts/enemy/bosses/saw/SawPrefab.tres" id="9_f438n"]
[ext_resource type="Resource" uid="uid://baujclodehp88" path="res://Scripts/enemy/bosses/claw/ClawPrefab.tres" id="10_6o5gf"]
[ext_resource type="Resource" uid="uid://dws7qvjfwi5e2" path="res://Scripts/enemy/normal/target_dummy/target_dummy.tres" id="11_o3b6r"]

[node name="EnemySpawner" type="Node3D" unique_id=1830396069 node_paths=PackedStringArray("wave_cooldown_timer", "credits_cooldown_timer", "boss_cooldown_timer", "diff")]
script = ExtResource("1_4l55s")
enemy_list = Array[ExtResource("2_tdwud")]([ExtResource("4_mjc5i"), ExtResource("4_qiwfs"), ExtResource("5_te1bg")])
augmented_list = Array[ExtResource("2_tdwud")]([ExtResource("6_iav0j"), ExtResource("4_5f1q1"), ExtResource("8_6o5gf")])
boss_list = Array[ExtResource("2_tdwud")]([ExtResource("9_f438n"), ExtResource("10_6o5gf")])
target_dummy = ExtResource("11_o3b6r")
wave_cooldown_timer = NodePath("WaveCooldownTimer")
credits_cooldown_timer = NodePath("CreditsCooldownTimer")
boss_cooldown_timer = NodePath("BossCooldownTimer")
diff = NodePath("DifficultyManager")

[node name="DifficultyManager" type="Node3D" parent="." unique_id=910481179]
script = ExtResource("6_mjc5i")
seconds_per_level = 30
credits_per_level = 0.5
heal_amount_per_level = 0.15
augment_enemy_chance_per_level = 0.01

[node name="WaveCooldownTimer" type="Timer" parent="." unique_id=565010498]
wait_time = 5.0
one_shot = true

[node name="BossCooldownTimer" type="Timer" parent="." unique_id=1892829519]
one_shot = true

[node name="CreditsCooldownTimer" type="Timer" parent="." unique_id=705848608]
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="WaveCooldownTimer" to="." method="_on_wave_cooldown_timer_timeout"]
[connection signal="timeout" from="BossCooldownTimer" to="." method="_on_boss_cooldown_timer_timeout"]
[connection signal="timeout" from="CreditsCooldownTimer" to="." method="_on_credits_cooldown_timer_timeout"]
